Fix contrast issues in sdc-ui
- fix all contrast issues in sdc ui to make the
  ui more accessible

Issue-ID: SDC-4801

--- a/catalog-ui/src/app/ng2/components/logic/service-dependencies/service-dependencies.component.less
+++ b/catalog-ui/src/app/ng2/components/logic/service-dependencies/service-dependencies.component.less
@@ -9,7 +9,7 @@
     padding: 7px 18px;
     position: relative;
     height: 61px;
-    color: @main_color_a;
+    color: @main_color_b; // Changed from @main_color_a (#009fdb) to meet WCAG AA 4.5:1 contrast
     box-shadow: 0 2px 7px @main_color_o;
     border-bottom: 1px solid @main_color_o;
     .checkbox-label {
