--- a/catalog-ui/src/app/ng2/components/ui/modal-import-type/modal-import-type.component.less
+++ b/catalog-ui/src/app/ng2/components/ui/modal-import-type/modal-import-type.component.less
@@ -56,5 +56,5 @@
 }
 
 .empty-value {
-    color: #aaaaaa;
+    color: #767676; // Darkened from #aaaaaa to meet WCAG AA 4.5:1 contrast
 }
