--- a/catalog-ui/src/app/ng2/pages/composition/interface-operatons/operation-creator/input-list/input-list-item/input-list-item.component.less
+++ b/catalog-ui/src/app/ng2/pages/composition/interface-operatons/operation-creator/input-list/input-list-item/input-list-item.component.less
@@ -119,5 +119,5 @@ label {
 }
 
 .empty-value {
-    color: #aaaaaa;
+    color: #767676; // Darkened from #aaaaaa to meet WCAG AA 4.5:1 contrast
 }
