--- a/catalog-ui/src/assets/styles/buttons.less
+++ b/catalog-ui/src/assets/styles/buttons.less
@@ -126,11 +126,11 @@ Examples:
 
     &.primary {
         border-color: @main_color_b;
-        background-color:  @main_color_a;
+        background-color: @main_color_b; // Changed from @main_color_a (#009fdb); white text now 5.38:1 (was 2.93:1)
         color: @main_color_p;
 
         &:hover     {
-            background-color:  #1ec2ff;
+            background-color:  #0077c8;
         }
     }
 
@@ -266,9 +266,3 @@ Examples:
         &:active    {background-color: #336c88;}    // Pressed
     }
 }
-
-
-
-
-
-
